kube/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dictator
  labels:
    env: dictator
