kube/app-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dictator-app-${APP_VERSION}
  labels:
    app: dictator-app
    version: "${APP_VERSION}"
spec:
  template:
    metadata:
      labels:
        app: dictator-app
        version: "${APP_VERSION}"
    spec:
      containers:
        - name: dictator-app
          image: ${GCR_PREFIX}/dictator-app:${APP_VERSION}
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/news/article
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /api/news/article
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 20
          resources:
            requests:
              memory: "768Mi"
