kube/mq-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ${MQ_NAME}-${APP_VERSION}
  labels:
    app: ${MQ_NAME}
    version: "${APP_VERSION}"
spec:
  template:
    metadata:
      labels:
        app: ${MQ_NAME}
        version: "${APP_VERSION}"
    spec:
      containers:
        - name: ${MQ_NAME}
          image: ${GCR_PREFIX}/dictator-activemq:${APP_VERSION}
          ports:
            - name: amq-admin
              containerPort: 8161
            - name: amq-openwire
              containerPort: 61616
          livenessProbe:
            httpGet:
              path: /
              port: 8161
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 8161
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 30
            failureThreshold: 20 
          volumeMounts:
            - name: ${MQ_NAME}-data
              mountPath: /var/lib/artemis/data
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      volumes:
        - name: ${MQ_NAME}-data
          persistentVolumeClaim:
            claimName: ${MQ_NAME}-pvc
