kube/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE_NAME}
  labels:
    name: dictator-app
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: dictator-app
    version: "${APP_VERSION}"
  type: NodePort
