kube/mq-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${MQ_NAME}
  labels:
    name: ${MQ_NAME}
spec:
  ports:
    - name: amq-admin
      port: 8161
      targetPort: 8161
    - name: amq-openwire
      port: 61616
      targetPort: 61616
  selector:
    app: "${MQ_NAME}"
    version: "${APP_VERSION}"
  type: NodePort
